SFDC Automation/src/objects/VehicleSearchSetting__c.object
<CustomObject>
    <fields>
        <fullName>Eng_Model_Tractor__c</fullName>
        <label>Eng Model Tractor</label>
        <picklist>
            <picklistValues>
                <fullName>MP7-C &apos;07 365/1700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISX&apos;07 400/2100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISX&apos;07 450/2100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C15&apos;02 435/2100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C704A 207/2300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C10&apos;02 315/1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14L&apos;04 455/2100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.7L&apos;04 455/1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISX&apos;07 485/500 1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBE 926</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC350ASETCEGR 1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-15 435/2100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C13 &apos;04 380HP @ 2100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISM 330/1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C7 &apos;07 207/2300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDC60-12L 370/1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISX 450/1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISM 350E/1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISB&apos;07 200/2300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISM 350/1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD15&apos;10 14.8 455/180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT466   260/1400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT-466E (HT)210/2300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S60 12.7L 360/1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISX&apos;02 450/2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISC&apos;07 260/2200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISM 310/1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>671</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C7&apos;07 210/2300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISX&apos;07 435/1800</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eng_Model_Trailer__c</fullName>
        <label>Eng Model Trailer</label>
        <picklist>
            <picklistValues>
                <fullName>Null</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eng_Model_Truck__c</fullName>
        <label>Eng Model Truck</label>
        <picklist>
            <picklistValues>
                <fullName>1.9L 2V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.7L&apos;04 380/1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14L&apos;04 455/1800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>190/2600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0L DOHC 136/6300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3&apos;04 143/5050</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.7L MBE600 154/3800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0L&apos;10  154/1400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0L 140/4800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0L EP&apos;07 154/1400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0L EP&apos;07 154/3400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.8L 200/4900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.8L 302/6500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.8L SFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.9 193/4500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>302 2V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3116T 170/2600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3116T 185/2600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3126.115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3126&apos;02 210/2200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3126&apos;02 230/2200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3126&apos;02 250/2200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3126&apos;02 275/2200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3126B 207/2300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3126E 210/2200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3176.138889</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2L 145/3600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3&apos;10 MFI 195/4600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3L 165/4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3L EFI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GVW_SAM__c</fullName>
        <label>GVW SAM</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>129000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14050</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17950</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17999</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gear_Ratio__c</fullName>
        <label>R.AXLE Gear Ratio</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.73</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.79</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.93</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.58</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.59</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.71</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.73</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.94</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.11</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lift_Gate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lift Gate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>40TH STREET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54TH STREET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABERDEEN MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACE ENDICO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIR PARK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKRON EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANY NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBUQUERQUE MISSION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALEXANDRIA LOUISIANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLENTOWN PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMARILLO TEXAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICUS GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMICK FARMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANN ARBOR MICHIGAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARCHBOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATHENS GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTA HILLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTA WASHINGTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUBURN HILLS MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN TEXAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAKERSFIELD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALTIMORE MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGOR ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATON ROUGE LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEAUMONT TEXAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELTLINE FARMERS BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENSENVILLE ILL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BETHUNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEVERLY NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BILLINGS MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <label>Model Year</label>
        <picklist>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ODOM_SAM__c</fullName>
        <label>ODOM SAM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_ODOM_SAM_Start_Truck__c</fullName>
        <label>PlaceHolder Trucks Sales Price End</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Tractors_Days_At_UTC_End__c</fullName>
        <label>PlaceHolder Tractors Days At UTC End</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Tractors_Days_At_UTC_Start__c</fullName>
        <label>PlaceHolder Tractors Days At UTC Start</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Tractors_Model_Year_End__c</fullName>
        <label>PlaceHolder Tractors Model Year End</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Tractors_Model_Year_Start__c</fullName>
        <label>PlaceHolder Tractors Model Year Start</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Tractors_ODOM_SAM_End__c</fullName>
        <label>PlaceHolder Tractors ODOM SAM End</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Tractors_ODOM_SAM_Start__c</fullName>
        <label>PlaceHolder Tractors ODOM SAM Start</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Tractors_Sales_Price_End__c</fullName>
        <label>PlaceHolder Tractors Sales Price End</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Tractors_Sales_Price_Start__c</fullName>
        <label>PlaceHolder Tractors Sales Price Start</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Trailers_Days_At_UTC_End__c</fullName>
        <label>PlaceHolder Trailers Days At UTC End</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Trailers_Days_At_UTC_Start__c</fullName>
        <label>PlaceHolder Trailers Days At UTC Start</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Trailers_Model_Year_End__c</fullName>
        <label>PlaceHolder Trailers Model Year End</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Trailers_Model_Year_Start__c</fullName>
        <label>PlaceHolder Trailers Model Year Start</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Trailers_ODOM_SAM_End__c</fullName>
        <label>PlaceHolder Trailers ODOM SAM End</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Trailers_ODOM_SAM_Start__c</fullName>
        <label>PlaceHolder Trailers ODOM SAM Start</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Trailers_Sales_Price_End__c</fullName>
        <label>PlaceHolder Trailers Sales Price End</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Trailers_Sales_Price_Start__c</fullName>
        <label>PlaceHolder Trailers Sales Price Start</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Trucks_Model_Year_End__c</fullName>
        <label>PlaceHolder Trucks Model Year End</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceHolder_Trucks_Model_Year_Start__c</fullName>
        <label>PlaceHolder Trucks Model Year Start</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REEF_MDL_Tractor__c</fullName>
        <label>REEF Model Tractor</label>
        <picklist>
            <picklistValues>
                <fullName>Null</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REEF_MDL_Trailer__c</fullName>
        <label>REEF Model Trailer</label>
        <picklist>
            <picklistValues>
                <fullName>50X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLDPLATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAC-2 A/C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTRA XT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTRA XT/NDM93MN2CMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK-III 30 CARGO HTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHX ULTRA XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB+ 210-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-200 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-200 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB210-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-300 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB 30-2 SPECTRUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB310-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-400 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBIII-30 (CONVERT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBIII 30+ SR WE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBIII-30 SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-III 30 SR+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBIII-30TC (CONVERT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-III 3O-WE  SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-III S SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-III TCI-2 WE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB SPECTRUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNWD30ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPECTRUM DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPECTRUM DE-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPECTRUM SB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REEF_MDL_Truck__c</fullName>
        <label>REEF Model Truck</label>
        <picklist>
            <picklistValues>
                <fullName>40X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40X ELECTRIC STANDBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50X ELECTRIC STANDBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC-362</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB-CI2 10D MAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB-CI2 20D MAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTEGRA 30S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTEGRA 40S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KDII 50 SR MAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M700 OASIS REEFER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD100-30SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD200-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD200-30SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD200-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD300-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD300-30SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD-300-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDII-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD-II 30 SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDII-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R90 MULTI-TEMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-II 30 SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDII-30 TC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD-II 50 SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB-III 30 DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB SPECTRUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPECTRUM SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPECTRUM TS-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPECTRUM TS-50</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REEF_MFG__c</fullName>
        <label>REEF Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>AURA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFGR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAM_Tractor__c</fullName>
        <label>SAM Tractor</label>
        <picklist>
            <picklistValues>
                <fullName>130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>131</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>132</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>141</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAM_Trailer__c</fullName>
        <label>SAM Trailer</label>
        <picklist>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>181</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>